# tidepool

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cross.toml  PROJECT_STRUCTURE.md  README.md  README.zh-CN.md  REFACTOR_SUMMARY.md  TODO_download_optimization.md  USAGE_GUIDE.md  rustfmt.toml
.cursor/rules/: code-review-checklist.mdc  cursor-ai-assistant-rules.mdc  git-conventional-commit-message.mdc  nushell-commands.mdc  ripgrep.mdc
.github/instructions/: unified.instructions.md
.github/workflows/: ci.yml  release.yml  update-dependencies.yml
cli/gvm/: Cargo.toml
cli/gvm/examples/: env_demo.rs
cli/gvm/src/: cli.rs  commands.rs  config.rs  lib.rs  ui.rs
cli/gvm/tests/: environment_integration_tests.rs  environment_tests.rs
cli/tidepool-gvm/: Cargo.toml  README.md  README.zh-CN.md
cli/tidepool-gvm/examples/: env_demo.rs
cli/tidepool-gvm/src/: cli.rs  commands.rs  main.rs
cli/tidepool-gvm/tests/: environment_tests.rs
cli/tidepool-openapi/: README.md
crates/tidepool-hosts-manager/: Cargo.toml  README.md
crates/tidepool-hosts-manager/examples/: basic_demo.rs  group_demo.rs  proxy_demo.rs
crates/tidepool-hosts-manager/src/: group.rs  host_entry.rs  hosts_manager.rs  lib.rs  proxy.rs
crates/tidepool-hosts-manager/tests/: group_manager_integration_tests.rs  hosts_manager_integration_tests.rs
crates/tidepool-version-manager/: Cargo.toml  README.md  README.zh-CN.md
crates/tidepool-version-manager/examples/: downloader_test.rs  hash_verification_demo.rs  junction_demo.rs  junction_test.rs  shields_evaluation.rs  temp_file_demo.rs  uninstall_protection_demo.rs
crates/tidepool-version-manager/src/: downloader.rs  go.rs  junction_utils.rs  lib.rs  symlink.rs
crates/tidepool-version-manager/tests/: force_install_tests.rs  go_manager_tests.rs  hash_verification_tests.rs  info_command_tests.rs  junction_crate_integration_tests.rs  junction_diagnostic_tests.rs  junction_edge_cases_tests.rs  junction_tests.rs  real_world_scenario_tests.rs  structured_interface_tests.rs  symlink_diagnostic_tests.rs  symlink_edge_cases_tests.rs  symlink_tests.rs  temp_file_download_tests.rs  uninstall_current_version_tests.rs
docs/: JUNCTION_CRATE_INTEGRATION.md  README.md  branch-management-report.md  cli-tools.md  code-quality-system.md  cross-compilation-podman.md  cross-compilation-report.md  environment-setup-feature.md  github-actions-distribution.md  github-actions-verification-report.md  progress.md  project-completion-summary.md  project-reorganization.md  release-checklist.md  test-organization.md  tidepool-version-manager.md
examples/: modern_ui_demo.rs
scripts/: build_cross.nu  code_quality.nu  release.nu  release_prepare.nu  run_tests.nu  test_binaries.nu
src/: cli.rs  commands.rs  commands_clean.rs  commands_new.rs  config.rs  downloader.rs  error.rs  go.rs  lib.rs  main.rs  platform.rs  progress_flat.rs  symlink.rs  ui.rs  ui_flat.rs
src/progress/: enhanced_install.rs  executor.rs  manager.rs  mod.rs  planner.rs  reporter.rs  simple_install.rs  tasks.rs  tracker.rs  types.rs  validator.rs
src/ui/: display.rs  interactive.rs  mod.rs  progress.rs  theme.rs
tests/: environment_setup_test.rs  integration_test.rs
