[package]
name = "tidepool"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[dependencies.tidepool-version-manager]
path = "crates/tidepool-version-manager"

[dev-dependencies]
tempfile = "3.5.0"

[workspace]
resolver = "2"
members = [
    "crates/tidepool-version-manager",
    "cli/gvm",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.70.0"
authors = ["Slothtron"]
license = "MIT"
repository = "https://github.com/Slothtron/tidepool"

[workspace.dependencies]
anyhow = "1.0"
indicatif = "0.17"
dirs = "5.0"
serde_json = "1.0"
console = "0.15"
futures = "0.3"
bytes = "1.0"
thiserror = "1.0"
url = "2.4"
zip = "0.6"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
tempfile = "3.5.0"

[workspace.dependencies.tokio]
version = "1.0"
features = ["full"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "stream",
    "blocking",
    "json",
    "rustls-tls",
]

[workspace.dependencies.clap]
version = "4.0"
features = ["derive"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
overflow-checks = false
