
[package]
name = "tidepool-gvm"
version = "0.1.5"
edition = "2021"
rust-version = "1.70.0"
authors = ["Slothtron"]
license = "MIT"
repository = "https://github.com/Slothtron/tidepool"
description = "A high-performance Go version management toolkit (GVM) written in Rust"

[[bin]]
name = "gvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
indicatif = { version = "0.17", features = ["improved_unicode"] }
dirs = "5.0"
serde_json = "1.0"
console = "0.15"
futures = "0.3"
bytes = "1.0"
thiserror = "1.0"
url = "2.4"
zip = "0.6"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
tempfile = "3.5.0"
sha2 = "0.10"

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
    "stream",
    "blocking",
    "json",
    "rustls-tls",
] }
clap = { version = "4.0", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
junction = "1.2.0"

# Unix-specific dependencies
[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.5.0"
tokio = { version = "1.0", features = ["macros", "rt"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
overflow-checks = false
