[package]
name = "tidepool-gvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Go Version Manager CLI - Simple and fast Go version switching"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tidepool_gvm"
path = "src/lib.rs"

[[bin]]
name = "gvm"
path = "src/main.rs"

[dependencies]
tidepool-version-manager = { version = "0.1.3", path = "../../crates/tidepool-version-manager" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
